avcodec: add vvc metadata bsf
You can download vtm 12 clips at https://www.itu.int/wftp3/av-arch/jvet-site/bitstream_exchange/VVC/under_test/VTM-12.0/
We run following command with all 267 VTM-12.0 clips:
ffmpeg -i in.bit  -c:v copy -bsf vvc_metadata -f vvc out.bit

The output bitstream can get same yuv as original.

--- a/libavcodec/Makefile
+++ b/libavcodec/Makefile
@@ -1236,6 +1236,7 @@ OBJS-$(CONFIG_VP9_METADATA_BSF)           += vp9_metadata_bsf.o
 OBJS-$(CONFIG_VP9_RAW_REORDER_BSF)        += vp9_raw_reorder_bsf.o
 OBJS-$(CONFIG_VP9_SUPERFRAME_BSF)         += vp9_superframe_bsf.o
 OBJS-$(CONFIG_VP9_SUPERFRAME_SPLIT_BSF)   += vp9_superframe_split_bsf.o
+OBJS-$(CONFIG_VVC_METADATA_BSF)           += h266_metadata_bsf.o
 
 # thread libraries
 OBJS-$(HAVE_LIBC_MSVCRT)               += file_open.o
