--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -46,7 +46,7 @@ jobs:
 
     steps:
     - name: Get FFVS-Project-Generator
-      uses: Invoke-WebRequest -Uri https://github.com/ShiftMediaProject/FFVS-Project-Generator/releases/download/1.11.6/FFVS-Project-Generator_1.11.6_x64.zip -OutFile FFVS-Project-Generator.zip; Expand-Archive FFVS-Project-Generator.zip
+      run: Invoke-WebRequest -Uri https://github.com/ShiftMediaProject/FFVS-Project-Generator/releases/download/1.11.6/FFVS-Project-Generator_1.11.6_x64.zip -OutFile FFVS-Project-Generator.zip; Expand-Archive FFVS-Project-Generator.zip
 
     - name: Get repository
       uses: actions/checkout@v3
@@ -54,7 +54,7 @@ jobs:
         path: main
 
     - name: Build
-      uses: ./FFVS-Project-Generator/project_generator.exe --enable-gpl --enable-version3 --disable-bzlib --disable-iconv --disable-zlib --disable-lzma --disable-sdl --toolchain=msvc --rootdir=main
+      run: ./FFVS-Project-Generator/project_generator.exe --enable-gpl --enable-version3 --disable-bzlib --disable-iconv --disable-zlib --disable-lzma --disable-sdl --toolchain=msvc --rootdir=main
 
     - name: Download Bitstream
       uses: actions/checkout@v3
