--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -7,11 +7,8 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
-env:
-  FFMPEG_PATH: FFmpeg/ffmpeg
 
 jobs:
-
   linux:
     name: Linux.${{ matrix.compiler.compiler }}
     strategy:
@@ -20,6 +17,8 @@ jobs:
         compiler:
           - { compiler: GNU,  CC: gcc }
           - { compiler: LLVM, CC: clang}
+    env:
+      FFMPEG_PATH: FFmpeg/ffmpeg
 
     runs-on: ubuntu-latest
     steps:
@@ -43,6 +42,8 @@ jobs:
   windows:
     name: Windows.MSVC
     runs-on: windows-latest
+    env:
+      FFMPEG_PATH: msvc\bin
 
     steps:
     - name: Set up MSVC
@@ -51,13 +52,19 @@ jobs:
     - name: Get FFVS-Project-Generator
       run: Invoke-WebRequest -Uri https://github.com/ShiftMediaProject/FFVS-Project-Generator/releases/download/1.11.6/FFVS-Project-Generator_1.11.6_x64.zip -OutFile FFVS-Project-Generator.zip; Expand-Archive FFVS-Project-Generator.zip
 
+    - name: Get NASM
+      run: Invoke-WebRequest -Uri https://github.com/ShiftMediaProject/VSNASM/releases/download/0.9/VSNASM.zip -OutFile VSNASM.zip; Expand-Archive VSNASM.zip; Start-Process .\VSNASM\install_script.bat
+
     - name: Get repository
       uses: actions/checkout@v3
       with:
-        path: main
+        path: src/main
+
+    - name: Generate visual studio project
+      run: .\FFVS-Project-Generator\project_generate.exe --rootdir=src/main --enable-ffmpeg --disable-everything --enable-decoder=vvc --enable-parser=vvc --enable-demuxer=vvc --enable-protocol=file --enable-protocol=pipe --enable-encoder=rawvideo --enable-muxer=rawvideo --enable-muxer=md5
 
     - name: Build
-      run: .\FFVS-Project-Generator\project_generate.exe --rootdir=main --enable-ffmpeg --disable-everything --enable-decoder=vvc --enable-parser=vvc --enable-demuxer=vvc --enable-protocol=file --enable-protocol=pipe --enable-encoder=rawvideo --enable-muxer=rawvideo --enable-muxer=md5
+      run: msbuild src\main\SMP\ffmpeg.sln
 
     - name: Download Bitstream
       uses: actions/checkout@v3
