--- a/libavcodec/Makefile
+++ b/libavcodec/Makefile
@@ -429,7 +429,7 @@ OBJS-$(CONFIG_HEVC_DECODER)            += hevcdec.o hevc_mvs.o \
 OBJS-$(CONFIG_VVC_DECODER)             += vvcdec.o vvc_ps.o vvc_thread.o vvc_cabac.o \
                                           vvc_ctu.o vvcdsp.o vvc_itx_1d.o vvcpred.o \
                                           vvc_inter.o vvc_mvs.o vvc_refs.o vvc_filter.o\
-                                          vvc_data.o
+                                          vvc_intra.o vvc_data.o
 OBJS-$(CONFIG_HEVC_AMF_ENCODER)        += amfenc_hevc.o
 OBJS-$(CONFIG_HEVC_CUVID_DECODER)      += cuviddec.o
 OBJS-$(CONFIG_HEVC_MEDIACODEC_DECODER) += mediacodecdec.o
