--- a/libavcodec/vvc/Makefile
+++ b/libavcodec/vvc/Makefile
@@ -1,4 +1,4 @@
 clean::
 	$(RM) $(CLEANSUFFIXES:%=libavcodec/vvc/%)
 
-OBJS-$(CONFIG_VVC_DECODER)          +=  executor.o
+OBJS-$(CONFIG_VVC_DECODER)          +=  vvc/vvcdec.o            \
