--- a/libavcodec/vvc/Makefile
+++ b/libavcodec/vvc/Makefile
@@ -5,3 +5,4 @@ OBJS-$(CONFIG_VVC_DECODER)          +=  vvc/vvcdec.o            \
                                         vvc/vvc_executor.o      \
                                         vvc/vvc_ps.o            \
                                         vvc/vvc_data.o          \
+                                        vvc/vvc_cabac.o
