--- a/libavcodec/vvc/Makefile
+++ b/libavcodec/vvc/Makefile
@@ -5,4 +5,5 @@ OBJS-$(CONFIG_VVC_DECODER)          +=  vvc/vvcdec.o            \
                                         vvc/vvc_executor.o      \
                                         vvc/vvc_ps.o            \
                                         vvc/vvc_data.o          \
-                                        vvc/vvc_cabac.o
+                                        vvc/vvc_cabac.o         \
+                                        vvc/vvc_refs.o
