vvcdec: add inv transform 1d

--- a/libavcodec/vvc/Makefile
+++ b/libavcodec/vvc/Makefile
@@ -9,4 +9,5 @@ OBJS-$(CONFIG_VVC_DECODER)          +=  vvc/vvcdec.o            \
                                         vvc/vvc_refs.o          \
                                         vvc/vvc_mvs.o           \
                                         vvc/vvc_ctu.o           \
-                                        vvc/vvc_inter.o
+                                        vvc/vvc_inter.o         \
+                                        vvc/vvc_itx_1d.o
