--- a/libavcodec/vvc/Makefile
+++ b/libavcodec/vvc/Makefile
@@ -10,4 +10,5 @@ OBJS-$(CONFIG_VVC_DECODER)          +=  vvc/vvcdec.o            \
                                         vvc/vvc_mvs.o           \
                                         vvc/vvc_ctu.o           \
                                         vvc/vvc_inter.o         \
-                                        vvc/vvc_itx_1d.o
+                                        vvc/vvc_itx_1d.o        \
+                                        vvc/vvc_intra.o
