--- a/libavcodec/vvc/Makefile
+++ b/libavcodec/vvc/Makefile
@@ -2,7 +2,7 @@ clean::
 	$(RM) $(CLEANSUFFIXES:%=libavcodec/vvc/%)
 
 OBJS-$(CONFIG_VVC_DECODER)          +=  vvc/vvcdec.o            \
-                                        ../libavutil/executor.o \
+                                        executor.o              \
                                         vvc/vvc_ps.o            \
                                         vvc/vvc_data.o          \
                                         vvc/vvc_cabac.o         \
