--- a/libavcodec/vvc/Makefile
+++ b/libavcodec/vvc/Makefile
@@ -2,4 +2,5 @@ clean::
 	$(RM) $(CLEANSUFFIXES:%=libavcodec/vvc/%)
 
 OBJS-$(CONFIG_VVC_DECODER)          +=  vvc/vvcdec.o            \
-                                        vvc/vvc_data.o
+                                        vvc/vvc_data.o          \
+                                        vvc/vvc_ps.o
