--- a/libavcodec/vvc/Makefile
+++ b/libavcodec/vvc/Makefile
@@ -3,3 +3,4 @@ clean::
 
 OBJS-$(CONFIG_VVC_DECODER)          +=  vvc/vvcdec.o            \
                                         vvc/vvc_data.o          \
+                                        vvc/vvc_ps.o            \
