vvc_sao: Add AArch64 NEON accelerated SAO band and edge filters
Signed-off-by: Shaun Loo <shaunloo10@gmail.com>

--- a/libavcodec/aarch64/Makefile
+++ b/libavcodec/aarch64/Makefile
@@ -71,3 +71,5 @@ NEON-OBJS-$(CONFIG_HEVC_DECODER)        += aarch64/hevcdsp_deblock_neon.o      \
                                            aarch64/hevcdsp_qpel_neon.o         \
                                            aarch64/hevcdsp_epel_neon.o         \
                                            aarch64/hevcdsp_sao_neon.o
+NEON-OBJS-$(CONFIG_VVC_DECODER)		+= aarch64/vvcdsp_init_aarch64.o	\
+					   aarch64/vvcdsp_sao_neon.o
